--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,10 +109,66 @@
   #RESET
 \*-----------------------------------*/
 
+*
+* ::before
+* ::after{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 
+li {
+  list-style : none;
+}
+
+a,
+img,
+span,
+input,
+button
+ion-icon{display: block;}
+
+a {
+  color:  inherit;
+  text-decoration: none;
+
+}
+
+input,
+button {
+  background: none;
+  border: none;
+  font: inherit;
+}
+
+input {
+  width: 100%;
+  outline: none;
+}
+
+button {
+  cursor : pointer;
+}
+
+ion-icon {
+  pointer-events : none;
+}
 
 
+address{
+  font-style : normal;
+}
+
+html {
+  font-family: var(--ff-poppins);
+  font-size: 10px;
+  scroll-behavior: smooth;
+}
+
+body{
+  background-color: var(--bg-black-alpha-20);
+}
 /*-----------------------------------*\
   #REUSED STYLE
 \*-----------------------------------*/
