--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -179,7 +179,7 @@ body{
 \*-----------------------------------*/
 
 .container {
-  padding-inline: 16px ;
+  padding-inline: 160px ;
 }
 
 
@@ -230,7 +230,7 @@ body{
   position: absolute;
   bottom: -10px;
   left: 50%;
-  transform: translate(-50%);
+  transform: translateX(-50%);
   width: 80%;
   height: 10px;
   background-color: var(--bg-black-alpha-20);
@@ -241,7 +241,7 @@ body{
 
 @keyframes DropShadow{
   0% {width: 40%;}
-  100% { width: 80%}
+  100% { width: 80%;}
 
 }
 
@@ -251,9 +251,7 @@ body{
 
 
 .overlay {
-  display: none;
-
-}
+  display: none;}
 
 .header .container{
   display: flex;
@@ -292,8 +290,8 @@ body{
 
 .navbar {
   position: fixed;
-  top: -350px;
-  right: 0px;
+  top: 0px;
+  right: -350px;
   max-width: 350px;
   width: 100%;
   height: 100vh;
@@ -314,7 +312,7 @@ body{
 }
 
 
-/*.navbar-top{
+.navbar-top{
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -322,7 +320,7 @@ body{
 
 .navbar-list{
   margin-block-start: 50px;
-}
+  
 
 .navbar-link{
   position: relative;
@@ -331,8 +329,31 @@ body{
   font-weight: var(--weight-medium);
   padding-block: 8px;
   transition: var(--transition-1);
-} */
+}
 
+.navbar-link::before{
+  content: "";
+  position: absolute;
+  width: 8px;
+  height: 10px;
+  background-color: var(--bg-majorelle-blue);
+  top: 50%;
+  left: -10px;
+  transform: translate(-50%) ;
+  border-radius: 5px;
+  opacity: 0;
+  transition: var(--transition-1);
+}
+
+.navbar-link:is(:hover, :focus-visible, .active)::before{opacity: 1;}
+
+.navbar-link:is(:hover, :focus-visible, .active){transform: translateX(-10px);}
+
+.header-action{
+  margin-block-start: auto;
+  padding-block-start: 20px;
+  border-block-start: ;
+}
 /*-----------------------------------*\
   #HERO
 \*-----------------------------------*/
