--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,34 +109,251 @@
   #RESET
 \*-----------------------------------*/
 
+*
+* ::before
+* ::after{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 
+li {
+  list-style : none;
+}
+
+a,
+img,
+span,
+input,
+button,
+ion-icon{display: block;}
+
+a {
+  color:  inherit;
+  text-decoration: none;
+
+}
+
+input,
+button {
+  background: none;
+  border: none;
+  font: inherit;
+}
+
+input {
+  width: 100%;
+  outline: none;
+}
+
+button {
+  cursor : pointer;
+}
+
+ion-icon {
+  pointer-events : none;
+}
 
 
-/*-----------------------------------*\
+address{
+  font-style : normal;
+}
+
+html {
+  font-family: var(--ff-poppins);
+  font-size: 10px;
+  scroll-behavior: smooth;
+}
+
+body{
+  background-color: var(--bg-lavender-blush);
+  color: var(--text-granite-gray);
+  font-size: var(--fontSize-6);
+  line-height:1.8 ;
+}
+/*----------------
+
+-------------------*\
   #REUSED STYLE
 \*-----------------------------------*/
 
+.container {
+  padding-inline: 160px ;
+}
 
 
 
 
-/*-----------------------------------*\
+
+
+
+
+/* /*-----------------------------------*\
   #PRELOADER
-\*-----------------------------------*
+\*-----------------------------------* */
+
+.preloader{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--bg-lavender-blush);
+  display: grid;
+  place-content: center;
+  z-index: 6;
+  transition: var(--transition-1);
+}
 
 
+.preloader.remove{
+  visibility: hidden;
+  opacity: 0;
+}
+
+.preloader .img {
+  animation: bounce 800ms ease-in-out infinite alternate;
+}
+
+@keyframes bounce {
+  0%{ transform: translateY(-10x);}
+  100% {transform: translateY(0);}
+
+}
+
+.preloader-inner{position: relative;}
 
 
+.preloader-inner::after {
+  content: "";
+  position: absolute;
+  bottom: -10px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 80%;
+  height: 10px;
+  background-color: var(--bg-black-alpha-20);
+  filter: blur(4px);
+  z-index: -1;
+  animation: dropShadow 800ms ease-in-out infinite alternate;
+}
+
+@keyframes DropShadow{
+  0% {width: 40%;}
+  100% { width: 80%;}
+
+}
 
 /*-----------------------------------*\
   #HEADER
 \*-----------------------------------*/
 
 
+.overlay {
+  display: none;}
+
+.header .container{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header{
+  padding-block: 30px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 4;
+}
+
+.header.active {
+  position: fixed;
+  background-color:var(--bg-white) ;
+  box-shadow: var(--shadow-1);
+
+  animation: slideIn 500ms ease forwards;
+}
+
+@keyframes slideIn {
+  0% {transform: translateY(-100%);}
+  100%{transform: translateY(0%);}
+
+}
+
+.header .logo img{
+  width : 160px;
+}
+
+.nav-toggler-btn{ font-size: 3.2rem;}
+
+.navbar {
+  position: fixed;
+  top: 0px;
+  right: -350px;
+  max-width: 350px;
+  width: 100%;
+  height: 100vh;
+  background-color: var(--bg-white);
+  padding: 30px 16px;
+  display: flex;
+  flex-direction: column;
+  z-index: 1;
+  transition: 400ms var(--cubic-out);
+  visibility: hidden;
+
+}
+
+ .navbar.active {
+  transform: translate(-350px);
+  transition-duration: 500ms;
+  visibility: visible;
+}
 
 
+.navbar-top{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
+.navbar-list{
+  margin-block-start: 50px;
+  
+
+.navbar-link{
+  position: relative;
+  color: var(--text-gunmetal);
+  font-size: var(--fontSize-7);
+  font-weight: var(--weight-medium);
+  padding-block: 8px;
+  transition: var(--transition-1);
+}
+
+.navbar-link::before{
+  content: "";
+  position: absolute;
+  width: 8px;
+  height: 10px;
+  background-color: var(--bg-majorelle-blue);
+  top: 50%;
+  left: -10px;
+  transform: translate(-50%) ;
+  border-radius: 5px;
+  opacity: 0;
+  transition: var(--transition-1);
+}
+
+.navbar-link:is(:hover, :focus-visible, .active)::before{opacity: 1;}
+
+.navbar-link:is(:hover, :focus-visible, .active){transform: translateX(-10px);}
+
+.header-action{
+  margin-block-start: auto;
+  padding-block-start: 20px;
+  border-block-start: ;
+}
 /*-----------------------------------*\
   #HERO
 \*-----------------------------------*/
